--- a/L06/index.html
+++ b/L06/index.html
@@ -51,11 +51,11 @@
         </div>
     </nav>
 
-    <div class="container-fluid w-100 bg-success shadow p-3 mb-5 rounded">
+    <div class="container-fluid w-100 bg-success">
         <div class="row align-items-center justify-content-center">
-            <div class="col-sm-7 text-center">
-                <h1 class="display-6"><b>Welcome to SOI Learning Portal</b></h1>
-                <p class="lead">Expertly crafted courses that best fit your learning needs and preferences.</p>
+            <div class="col-sm-7 text-center py-4">
+                <h1 class="display-6 text-light"><b>Welcome to SOI Learning Portal</b></h1>
+                <p class="lead text-dark"><b>Expertly crafted courses that best fit your learning needs and preferences.</b></p>
                 <button type="button" class="btn btn-dark">Browse Courses</button>
                 <button type="button" class="btn btn-light">Be An Instructor</button>
             </div>
@@ -70,15 +70,15 @@
     <div class="container-fluid bg-info p-5">
         <div class="row">
             <div class="col text-center">
-                <h6><b>158 online courses</b></h6>
+                <i class="bi bi-journal-bookmark-fill"></i><h6><b>158 online courses</b></h6>
                 Enjoy a variety of fresh topics
             </div>
             <div class="col text-center">
-                <h6><b>Expert instruction</b></h6>
+                <i class="bi bi-person-circle"></i><h6><b>Expert instruction</b></h6>
                 Find the right instructor for you
             </div>
             <div class="col text-center">
-                <h6><b>Lifetime access</b></h6>
+                <i class="bi bi-clock-history"></i><h6><b>Lifetime access</b></h6>
                 Learn on your schedule
             </div>
         </div>
@@ -91,13 +91,11 @@
                 <div class="card">
                     <img src="https://source.unsplash.com/RyLsRzy9jIA" class="card-img-top" alt="Plants">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some example text to build on the card title and make up the bulk of the
-                            card's content.</p>
-                        <a href="#">Learn more</a>
+                        <h5 class="card-title">Introduction to HTML and CSS</h5>
+                        <p class="card-text"><i class="bi bi-clock"></i> 2h 30m</p>
                     </div>
                     <div class="card-footer text-muted">
-                        Author
+                        <i class="bi bi-person-circle"></i> Hannah Lim<span><i class="float-end bi bi-bookmark-fill"></i></span>
                     </div>
                 </div>
             </div>
@@ -105,13 +103,11 @@
                 <div class="card">
                     <img src="https://source.unsplash.com/RyLsRzy9jIA" class="card-img-top" alt="Plants">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some example text to build on the card title and make up the bulk of the
-                            card's content.</p>
-                        <a href="#">Learn more</a>
+                        <h5 class="card-title">User Experience and Interface Design</h5>
+                        <p class="card-text"><i class="bi bi-clock"></i> 2h 45m</p>
                     </div>
                     <div class="card-footer text-muted">
-                        Author
+                        <i class="bi bi-person-circle"></i> Julia Lee<span><i class="float-end bi bi-bookmark-fill"></i></span>
                     </div>
                 </div>
             </div>
@@ -119,13 +115,11 @@
                 <div class="card">
                     <img src="https://source.unsplash.com/RyLsRzy9jIA" class="card-img-top" alt="Plants">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some example text to build on the card title and make up the bulk of the
-                            card's content.</p>
-                        <a href="#">Learn more</a>
+                        <h5 class="card-title">iOS App Development using Xcode and Swift</h5>
+                        <p class="card-text"><i class="bi bi-clock"></i> 4h 30m</p>
                     </div>
                     <div class="card-footer text-muted">
-                        Author
+                        <i class="bi bi-person-circle"></i> Ryan Low<span><i class="float-end bi bi-bookmark-fill"></i></span>
                     </div>
                 </div>
             </div>
@@ -133,22 +127,24 @@
                 <div class="card">
                     <img src="https://source.unsplash.com/RyLsRzy9jIA" class="card-img-top" alt="Plants">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some example text to build on the card title and make up the bulk of the
-                            card's content.</p>
-                        <a href="#">Learn more</a>
+                        <h5 class="card-title">Front-end JavaScript Frameworks</h5>
+                        <p class="card-text"><i class="bi bi-clock"></i> 3h 45m</p>
                     </div>
                     <div class="card-footer text-muted">
-                        Author
+                        <i class="bi bi-person-circle"></i> Azhar Kamar<span><i class="float-end bi bi-bookmark-fill"></i></span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer>
-        <div class="text-center p-3 bg-dark text-white">
-            © 2021 Copyright: SOI Learning
+    <footer class="px-5">
+        <div class="p-3 pb-5 border-top text-dark">
+            <span class="float-start">© 2021 SOI Learning Portal. All Rights Reserved.</span>
+<span class="float-end text-dark"><a>Privacy</a>
+<a>Terms</a>
+<a>Feedback</a>
+<a>Support</a></span>
           </div>
         </footer>
 
