--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -251,10 +251,10 @@
                                                 they can select or they have selected an action(teleportation) or item.
                                             </p>
 
-                                            <img src="images/vrMain.webp" style="width:90%;" loading="lazy"/><br>
+                                            <img src="images/xrSim1.webp" style="width:90%;" loading="lazy"/><br>
                                             <p>^Visual feedback, outline around selectable objects, ss of actual gameplay with xr simulator</p>
                                             <br>
-                                            <img src="images/vrRoom.webp" style="width:90%;" loading="lazy"/><br>
+                                            <img src="images/xrSim2.webp" style="width:90%;" loading="lazy"/><br>
                                             <p>^Visual feedback, reticle on surfaces you can teleport to, ss of actual gameplay with xr simulator</p>
                                             <br>
 
@@ -263,28 +263,28 @@
                                             <p>The VR game “Sanctum of shadows” is a horror game with a mostly realistic graphic style. The game art style takes inspiration
                                                 from games such as The bridge curse 2: the extrication  and Welcome to kowloon.</p>
 
-                                            <i>Player:  is only visible through a pair of hands and is otherwise not visible.</i>
-                                            <img src="images/vrMain.webp" style="width:90%;" loading="lazy"/>
+                                            <i>Player:  is only visible through a pair of hands and is otherwise not visible.</i><br>
+                                            <img src="images/xrSim3.webp" style="width:90%;" loading="lazy"/>
                                             <p>^actual game ss using xr simulator</p>
 
                                             <i>Lighting: The aims to be dimly lit or close to no light for most of its areas, 
                                                 requiring a torch to help in navigation at times
-                                            </i>
-                                            <img src="images/vrMain.webp" style="width:90%;" loading="lazy"/>
+                                            </i><br>
+                                            <img src="images/xrSim4.webp" style="width:90%;" loading="lazy"/>
                                             <p>^actual game ss using xr simulator</p>
 
                                             <i>Color palette : colors will mostly be not seen except for the 
                                                 interactor rays and when the game successfully ends and the user escapes.
-                                            </i>
-                                            <img src="images/vrMain.webp" style="width:90%;" loading="lazy"/>
+                                            </i><br>
+                                            <img src="images/welcome2Kowloon.webp" style="width:90%;" loading="lazy"/>
                                             <p>^ss of welcome to kowloon, non vr game</p>
 
                                             <i>UI: Simplistic style
-                                            </i>
-                                            <img src="images/vrMain.webp" style="width:90%;" loading="lazy"/>
+                                            </i><br>
+                                            <img src="images/vrUI.webp" style="width:50%;" loading="lazy"/>
                                             <p>^layout plan for pause menu if time allows, created via illustrator</p>
 
-                                            <img src="images/vrMain.webp" style="width:90%;" loading="lazy"/>
+                                            <img src="images/editorMainMenu.webp" style="width:90%;" loading="lazy"/>
                                             <p>^ss in editor for scene of main menu</p>
 
                                             <h6><b>Player Profile Stories</b></h6>
@@ -295,47 +295,48 @@
                                                 Age: 27<br>
                                                 Occupation: Student<br><br>
                                                 <b>Game Interests</b><br>
-                                                Gaming style: Enjoys immersive experiences in VR.<br>
-                                                Hours spent gaming weekly: 15<br>
-                                                Gaming platform(s): Oculus Rift, PlayStation, PC<br>
-                                                Favorite game(s): The Exorcist: Legion VR, The Bridge Curse 2: The Extrication<br>
-                                                Favorite game genre(s): Horror, Puzzle, Mystery<br><br>
+                                                - Gaming style:Enjoys immersive experiences in VR.<br>
+                                                - Hours spent gaming weekly: 15<br>
+                                                - Gaming platform(s): Oculus Rift, PlayStation, PC<br>
+                                                - Favorite game(s): The Exorcist: Legion VR, The Bridge Curse 2: The Extrication<br>
+                                                - Favorite game genre(s): Horror, Puzzle, Mystery<br><br>
                                                 <b>Entertainment Interests</b><br>
-                                                Favorite movie(s): The Conjuring, Hereditary<br>
-                                                Social media platforms: Instagram, Tumblr, Reddit<br><br>
+                                                - Favorite movie(s): The Conjuring, Hereditary<br>
+                                                - Social media platforms: Instagram, Tumblr, Reddit<br><br>
                                                 <b>Preferences</b><br>
-                                                Likes: Immersive horror experiences, solving complex puzzles, atmospheric storytelling.<br>
-                                                Dislikes: Repetitive and straightforward gameplay, competitive gaming.<br><br>
+                                                - Likes: Immersive horror experiences, solving complex puzzles, atmospheric storytelling.<br>
+                                                - Dislikes: Repetitive and straightforward gameplay, competitive gaming.<br><br>
                                                 <b>Gameplay Focus</b><br>
                                                 Vanessa will explore and try to figure out what each clue in the puzzle meant and probably figure out the storyline along the way as way, it will provide the atmospheric storytelling and immersiveness she craves from such games.<br><br>
-                                                Basic Info(player profile 2)
-                                                Name: Christopher
-                                                Age: 35
-                                                Occupation: IT Specialist at a Tech Startup
-                                                Game Interests
-                                                Gaming style: Prefers solo gameplay for a more immersive experience.
-                                                Hours spent gaming weekly: 12
-                                                Gaming platform(s): Oculus Rift, PlayStation + PSVR, PC
-                                                Favorite game(s): Resident Evil 7,  Welcome to kowloon
-                                                Favorite game genre(s): Horror, Escape Room, Puzzle
-                                                Entertainment Interests
-                                                Favorite movie(s): Insidious, The bridge curse: Ritual
-                                                Social media platforms: Instagram, X, Reddit
-                                                Preferences
-                                                Likes: Intense VR horror experiences, challenging escape room puzzles, atmospheric sound design.
-                                                Dislikes: Simplistic gameplay mechanics, competitive gaming.
-                                                Gameplay Focus
-                                                Christopher will find the escape room puzzles very interesting as they can be quite challenging due to the interroom connections , he will also like the atmospheric sound design as well.
+                                                
+                                                <b>Basic Info(player profile 2)</b><br>
+                                                Name: Christopher<br>
+                                                Age: 35<br>
+                                                Occupation: IT Specialist at a Tech Startup<br><br>
+                                                <b>Game Interests</b><br>
+                                                - Gaming style: Prefers solo gameplay for a more immersive experience.<br>
+                                                - Hours spent gaming weekly: 12<br>
+                                                - Gaming platform(s): Oculus Rift, PlayStation + PSVR, PC<br>
+                                                - Favorite game(s): Resident Evil 7,  Welcome to kowloon<br>
+                                                - Favorite game genre(s): Horror, Escape Room, Puzzle<br><br>
+                                                <b>Entertainment Interests</b><br>
+                                                - Favorite movie(s): Insidious, The bridge curse: Ritual<br>
+                                                - Social media platforms: Instagram, X, Reddit<br><br>
+                                                <b>Preferences</b><br>
+                                                - Likes: Intense VR horror experiences, challenging escape room puzzles, atmospheric sound design.<br>
+                                                - Dislikes: Simplistic gameplay mechanics, competitive gaming.<br><br>
+                                                <b>Gameplay Focus</b><br>
+                                                Christopher will find the escape room puzzles very interesting as they can be quite challenging due to the interroom connections , he will also like the atmospheric sound design as well.<br><br>
 
-                                                Summary  of player profiles
-                                                Both players will like the challenging room puzzles that has some linking to the story , the sound will also help them feel immersive in the experience as well.
+                                                <b>Summary  of player profiles</b><br>
+                                                Both players will like the challenging room puzzles that has some linking to the story , the sound will also help them feel immersive in the experience as well.<br>
 
                                             </p>
 
 
                                             <h6><b>Milestone Schedule</b></h6>
                                             <ul class="itemList">
-                                                <li>[1] Pre-Production Phase:<br>
+                                                <li><b>[1] Pre-Production Phase:</b><br>
                                                     <i>Milestone 1: Concept and Design Document</i><br>
                                                     Deadline: week 1 <br>
                                                     Deliverables: Game concept, detailed design document outlining gameplay mechanics, and art style, chosen unity render pipeline.<br><br>
@@ -343,7 +344,7 @@
                                                     Deadline: week 2<br>
                                                     Deliverables: gathering & sorting assets, placement of assets, simple haptic and sound design. <br><br>
                                                 </li>
-                                                <li>[2] Production Phase:<br>
+                                                <li><b>[2] Production Phase:</b><br>
                                                     <i>Milestone 3: Vertical Slice Look & Feel II</i><br>
                                                     Deadline: week 3<br>
                                                     Deliverables: More ambient sounds and effects, jumpscare, simple  gameplay mechanics <br><br>
@@ -351,7 +352,7 @@
                                                     Deadline: Month 3<br>
                                                     Deliverables: Polished version with refined gameplay, graphic effect, All bugs fixed, and the game is ready for testing.<br><br>
                                                 </li>
-                                                <li>[3]Polishing and Testing Phase:<br>
+                                                <li><b>[3]Polishing and Testing Phase:</b><br>
                                                     <i>Milestone 5: Vertical Slice: Final</i><br>
                                                     Deadline: week 4<br>
                                                     Deliverables: Final version of the vertical slice. Finalization of gameplay mechanics, sound and art style. Game is optimized for performance on target platforms.<br>
