--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -264,7 +264,7 @@
                                                 from games such as The bridge curse 2: the extrication  and Welcome to kowloon.</p>
 
                                             <i>Player:  is only visible through a pair of hands and is otherwise not visible.</i><br>
-                                            <img src="images/xrSim3.webp" style="width:90%;" loading="lazy"/>
+                                            <img src="images/playerHands.webp" style="width:90%;" loading="lazy"/>
                                             <p>^actual game ss using xr simulator</p>
 
                                             <i>Lighting: The aims to be dimly lit or close to no light for most of its areas, 
