--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -164,6 +164,59 @@
 
                     <!--separator-->
 
+                    <div id="arNameCard" class="modal">
+
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                            <div class="row">
+
+                                <span class="close">&times;</span>
+                                <b style="margin-left:1rem; margin-top:-0.5rem; padding-bottom: 20px; opacity:0.7;"><i>AR Name Card using Vuforia</i></b><br>
+                                <div class="col-md">
+                                    <div class="row">
+
+                                        <div class="col-md-5" style="height:50%; overflow: hidden; margin-left:20px; margin-right:-50px;">
+                                            <img src="images/editorView.webp" style="width:100%;"/><br>
+                                            <p>^Editor View</p>
+                                        </div>
+                                        <div class="col-md-7">
+                                            <h6><b>AR Name Card </b></h6>
+
+                                            <img src="images/sketches.webp" style="width:90%;"/><br>
+                                            <p>^Sketches</p>
+
+                                            <img src="images/vueforia.webp" style="width:90%;"/><br>
+                                            <p>^Vuforia upload, digital(winner) vs camera taken</p>
+
+                                            <img src="namecardSide.webp" style="width:90%;"/><br>
+                                            <p>^Name Card Digital, number has been remove</p>
+
+                                            <img src="tinkercadObj.webp" style="width:90%;"/><br>
+                                            <p>^Use of tinkercad to created all objects for name card scene</p>
+
+                                            <img src="liveOnScreen.webp" style="width:90%;"/><br>
+                                            <p>^Use of tinkercad to created all objects for name card scene</p>
+                                            <br>
+
+
+                                        </div>
+
+
+                                    </div>
+
+                                </div>
+
+
+
+                            </div>
+
+
+                        </div>
+
+                    </div>
+
+                    <!--separator-->
+
                     <div id="vrGame" class="modal">
 
                         <!-- Modal content -->
@@ -308,7 +361,7 @@
                                                 - Dislikes: Repetitive and straightforward gameplay, competitive gaming.<br><br>
                                                 <b>Gameplay Focus</b><br>
                                                 Vanessa will explore and try to figure out what each clue in the puzzle meant and probably figure out the storyline along the way as way, it will provide the atmospheric storytelling and immersiveness she craves from such games.<br><br>
-                                                
+
                                                 <b>Basic Info(player profile 2)</b><br>
                                                 Name: Christopher<br>
                                                 Age: 35<br>
