--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -195,7 +195,7 @@
                                             <p>^Use of tinkercad to created all objects for name card scene</p>
 
                                             <img src="liveOnScreen.webp" style="width:90%;"/><br>
-                                            <p>^Use of tinkercad to created all objects for name card scene</p>
+                                            <p>^Actual use of apk on screen</p>
                                             <br>
 
 
