--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -188,13 +188,13 @@
                                             <img src="images/vueforia.webp" style="width:90%;"/><br>
                                             <p>^Vuforia upload, digital(winner) vs camera taken</p>
 
-                                            <img src="namecardSide.webp" style="width:90%;"/><br>
+                                            <img src="images/namecard.webp" style="width:90%;"/><br>
                                             <p>^Name Card Digital, number has been remove</p>
 
-                                            <img src="tinkercadObj.webp" style="width:90%;"/><br>
+                                            <img src="images/tinkercad.webp" style="width:40%;"/><br>
                                             <p>^Use of tinkercad to created all objects for name card scene</p>
 
-                                            <img src="liveOnScreen.webp" style="width:90%;"/><br>
+                                            <img src="images/liveScreen.webp" style="width:90%;"/><br>
                                             <p>^Actual use of apk on screen</p>
                                             <br>
 
